modified:   frontend/index.html added register styling into index.html for rendering 	modified:   frontend/src/App.jsx added registerpage route into web app 	new file:   frontend/src/components/Register.css added code for register page styling 	new file:   frontend/src/components/Register.jsx added code for register page     modified:   frontend/src/pages/RegisterPage.jsx added register component to web app routes

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./src/components/SearchBar.css" />
     <link rel="stylesheet" href="./src/components/ReviewDetails.css" />
+    <link rel="stylesheet" href="./src/components/Register.css" />
     <title>ClassCritic</title>
   </head>
   <body>
