updated the dark/light mode theme colors

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="./src/components/SearchBar.css" />
     <link rel="stylesheet" href="./src/components/ReviewDetails.css" />
     <link rel="stylesheet" href="./src/components/Register.css" />
+    <link rel="icon" type="image/x-icon" href="./src/assets/TitleLogo.webp" />
     <title>ClassCritic</title>
   </head>
   <body>
